fixed scrollbar height

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7,6 +7,9 @@
  
 /*Some custom CSS*/
 
+
+
+
 #btn-cap {
     background:none;
     margin-top:-15px;
@@ -103,6 +106,7 @@ html, body {
     width: 100%;
     height: 100%;
     color:#fff !important;
+    overflow:none;
 }
 
 
